--- a/src/css/ReposPage.css
+++ b/src/css/ReposPage.css
@@ -39,3 +39,13 @@ button {
 .outer-btns {
   padding: 12px 18px;
 }
+
+.repo-more {
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.repo-more:hover {
+  color: #ec4354;
+    
+}
