--- a/src/css/SingleRepo.css
+++ b/src/css/SingleRepo.css
@@ -5,17 +5,20 @@
   align-items: center;
 }
 
-.singlerepo {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-}
-.repo-count {
+.repo-count,
+.repo-about,
+.repo-state {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .li-item {
   list-style: none;
+  margin-left: 10px;
+}
+
+.text-sm {
+  text-decoration: none;
 }
