--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 body{
+  width: 800px;
+  max-width: 100%
+  text-align: center;
+  margin: 0 auto;
   padding:0;
-   margin:0;
-  height: 100vh;
   font-family: 'GFS Neohellenic', sans-serif;
+  box-sizing: border-box;
+  max-height: 100vh;
 }
 
 
