--- a/src/css/Mygithub.css
+++ b/src/css/Mygithub.css
@@ -1,24 +1,41 @@
-body { 
-width: 100%;
-background-image: linear-gradient(to right, #EEE, #EC4534);
+.nav-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px 20px;
+  border-bottom: 1px solid #ec4354;
+  border-top: 1px solid #ec4354;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 .mycard {
-  overflow:hidden;
+  width: 800px;
+  max-width: 100%
+  text-align: center;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px 200px;
+
   
 }
 
 img {
-  width: 70%;
   display: block;
   border-radius: 10px;
+  margin: 0 auto;
 }
 
 .card-top {
   border-top: 1px solid #ec4354;
   margin-top: 25px;
+}
+
+.git-bio,
+.git-name,
+.git-followers,
+.git-following,
+.git-repos {
+  border-bottom: 1px solid #ec4354;
 }
 
