--- a/src/css/TestError.css
+++ b/src/css/TestError.css
@@ -4,8 +4,17 @@ FoodError {
 }
 
 input {
-  margin: 300px 30px 0 500px;
+  margin: 300px 30px 0 250px;
   padding: 8px 12px;
   border: none;
   border-radius: 5px;
+}
+
+input:hover {
+  border: 1px solid #545e6f;
+}
+
+.input-food {
+  border-bottom: 1px solid #ec4354;
+  border-top: 1px solid #ec4354; 
 }
